--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "description": "Backend for TripSync",
     "main": "src/index.ts",
     "scripts": {
-        "start": "ts-node src/index.ts",
+        "start": "node dist/index.js",
+        "build": "tsc",
         "dev": "nodemon src/index.ts"
     },
     "dependencies": {
